add elasticmock to requirements-dev at root level

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -15,6 +15,7 @@ pytest>=3.2.1
 pytest-xdist>=1.2.0
 pytest-cov
 tox
+elasticmock
 
 # Local package required for Sphinx docs
 -e tools/c7n_sphinxext
