setup command line run, slack api token logic

--- a/tools/c7n_slacker/requirements.txt
+++ b/tools/c7n_slacker/requirements.txt
@@ -9,7 +9,7 @@ click>=6.7
 c7n
 Markup
 MarkupSafe==1.0
-python-dateutil>=2.5.2
+python-dateutil<2.7.0
 ldap3
 ruamel.yaml<0.15 # rq.filter: <0.15
 six==1.11.0
